# stat-362-final

./: FINAL_initial_exploration.ipynb  README.md  pyproject.toml
code/: FINAL_baseline.ipynb  FINAL_bidirectional_rnn.ipynb  FINAL_embedding_model.ipynb  FINAL_gated_rnn.ipynb  FINAL_overall_analysis.ipynb  FINAL_transformer.ipynb  FINAL_vanilla_rnn.ipynb  README.md  baseline_template.ipynb  bidirectional_rnn_template.ipynb  embedding_model_template.ipynb  gated_rnn_template.ipynb  overall_analysis_template.ipynb  util_funcs.py  vanilla_rnn_template.ipynb
colab/: README.md  util_funcs.py
data/: README.md
exploration/: FINAL_initial_exploration.ipynb  README.md  test_notebook.ipynb
reports/: README.md
