[tool.poetry]
name = "stat-362-final"
version = "0.1.0"
description = ""
package-mode = false
authors = ["zhang-j-j jimmyzhang2027@u.northwestern.edu"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
numpy = "^2.3.5"
pandas = "^2.3.3"
scikit-learn = "^1.7.2"
matplotlib = "^3.10.7"
seaborn = "^0.13.2"
xgboost = "^3.1.2"
keras = "^3.12.0"
torch = "^2.9.1"
ipykernel = "^7.1.0"
tensorflow = "^2.20.0"
transformers = "^4.57.1"
nltk = "^3.9.2"
sentence-transformers = "^5.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
